<resources>
    <string name="app_name">行车记录仪</string>
    <string name="back">返回</string>
    <string name="live_video">实时影像</string>
    <string name="playback_list">回放列表</string>
    <string name="setting">设置</string>

    <string name="system">系统</string>
    <string name="storageCard_format">存储卡格式化</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="export">导出</string>
    <string name="delete">删除</string>
    <string name="selectAll">全选</string>
    <string name="exit">再按一次退出程序</string>

    <string name="appname_tag">程序名称: 行车记录仪</string>
    <string name="features">特性:</string>
    <string name="strNewerVer">发现新版本，是否立即升级？</string>
    <string name="updateNow">升级</string>
    <string name="isDownLoading">正在更新...</string>
    <string name="downloadlater">取消</string>
    <string name="record_video">行车视频</string>
    <string name="lock_video">锁定视频</string>
    <string name="photo">图片</string>
    <string name="restore_defaults">默认值</string>
    <string name="version">版本</string>
    <string name="firmware_version">固件版本</string>
    <string name="app_version">APP版本</string>
    <string name="Pictures_success">拍照成功</string>
    <string name="Pictures_fail">拍照失败</string>
    <string name="LockVideo_start">开始锁定</string>
    <string name="LockVideo_fail">锁定视频失败</string>
    <string name="openVideo_fail">开启录像失败</string>
    <string name="closeVideo_fail">关闭录像失败</string>
    <string name="connect_fail">无法连接到行车记录仪</string>
    <string name="ok">确认</string>
    <string name="close">关闭</string>
    <string name="logo_text">比亚迪行车记录仪</string>
    <string name="card_removed">请插入存储卡</string>
    <string name="card_inserted">存储卡已插入</string>
    <string name="reboot_drivingReorder">请重启记录仪</string>
    <string name="format_finished">存储卡格式化已完成</string>
    <string name="format_fail">存储卡格式化失败</string>
    <string name="downloading">正在导出</string>
    <string name="Download_completed">导出至"行车记录仪"目录</string>
    <string name="Download_fail">导出失败</string>
    <string name="File_downloaded">文件已导出</string>
    <string name="open_permissions">请打开app的存储权限</string>
    <string name="share_to">分享到</string>
    <string name="video_cannot_share">视频暂时无法分享</string>
    <string name="select_to_download">请选择要导出的文件</string>
    <string name="confirm_delete">确定删除？</string>
    <string name="Reconnecting">正在重连...</string>
    <string name="restore_settings">是否恢复默认设置？</string>
    <string name="confirm_format_memory_card">是否格式化存储卡？</string>
    <string name="connecting">正在重连...</string>
    <string name="time_out">连接超时，记录仪无应答</string>
    <string name="download_num">文件最大选择数为9</string>
    <string name="download_num_tv">文件最大选择数为5</string>
    <string name="download_free_space">下载存储空间小于1GB</string>
    <string name="card_readying">存储卡准备中</string>
    <string name="image_max">图片已存储满</string>
    <string name="card_issue">存储卡异常</string>
    <string name="card_write_protect">存储卡写保护</string>
    <string name="card_not_enough">存储卡空间不足</string>
    <string name="card_need_format">存储卡需格式化</string>
    <string name="sensor_issue">无法获取视频信息</string>
    <string name="video_locking">视频锁定中</string>
    <string name="immediately_format">立刻格式化</string>
    <string name="later_format">暂不格式化</string>
    <string name="card_need_format_detail">您可以点击[设置]进行存储卡格式化</string>
    <string name="reformat">重新格式化</string>
    <string name="check_version">检查新版本</string>
    <string name="version_newest">当前已是最新版本</string>
    <string name="storage_card_formatting">存储卡格式化中</string>
    <string name="delete_fail">删除失败</string>
    <string name="delete_success">删除成功</string>
    <string name="open_voice">打开录音</string>
    <string name="close_voice">关闭录音</string>
    <string name="voice_settingfail">录音开关失败</string>
    <string name="del_image_sure">确认删除？</string>
    <string name="invalid_token">无法获得会话号</string>
    <string name="select_file">请先选择文件</string>
    <string name="LockVideo_end">锁定视频完成</string>
    <string name="video_locking_format_later">正在锁定视频，请稍后再格式化</string>
    <string name="export_address">文件将被导出到本地-行车记录仪文件夹</string>
    <string name="deleting">删除中</string>
    <string name="get_firmware_version_fail">固件版本获取失败</string>
</resources>
