<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/bg_dialog">

    <!--<ImageButton-->
        <!--android:id="@+id/btn_closeDialog"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintVertical_bias="0.07"-->
        <!--app:layout_constraintHorizontal_bias="0.04"-->
        <!--android:background="@drawable/btn_close_dialog_selector"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--android:visibility="invisible"/>-->

    <TextView
        android:id="@+id/tv_dialogContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:gravity="center"
        android:text="@string/card_need_format"
        android:textColor="#fff"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tv_dialogContentDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:gravity="center"
        android:text="@string/card_need_format_detail"
        android:textColor="#7C7C7C"
        android:textSize="@dimen/sp_10" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/ll_line_choose"
        android:src="@mipmap/line_below_content" />

    <LinearLayout
        android:id="@+id/ll_line_choose"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintBottom_toBottomOf="parent"

        android:orientation="horizontal">

        <com.byd.vtdr.widget.ThemeLightButton
            android:id="@+id/btn_dialogSure"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/immediately_format"
            android:textAllCaps="false"
            android:textSize="@dimen/sp_11" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/line_between_choose" />

        <com.byd.vtdr.widget.ThemeLightButton
            android:id="@+id/btn_dialogCancel"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/later_format"
            android:textAllCaps="false"
            android:textSize="@dimen/sp_11" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>