<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/bg_dialog">

    <!--<ImageButton-->
        <!--android:id="@+id/btn_closeDialog"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintVertical_bias="0.07"-->
        <!--app:layout_constraintHorizontal_bias="0.04"-->
        <!--android:background="@drawable/btn_close_dialog_selector"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--android:visibility="invisible"/>-->

    <TextView
        style="@style/TextStyle"
        android:id="@+id/tv_dialogContent"
        android:layout_width="189dp"
        android:layout_height="71dp"
        android:layout_marginStart="8dp"
        android:text="@string/downloading"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/pb_downloadProgressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <ProgressBar
        android:id="@+id/pb_downloadProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="100"
        style="@style/ProgressBarStyle"
        app:layout_constraintBottom_toBottomOf="@id/tv_dialogContent"
        app:layout_constraintLeft_toRightOf="@id/tv_dialogContent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_dialogContent" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/tv_progressPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/pb_downloadProgressBar"
        app:layout_constraintLeft_toLeftOf="@id/pb_downloadProgressBar"
        app:layout_constraintRight_toRightOf="@id/pb_downloadProgressBar"
        app:layout_constraintBottom_toBottomOf="@id/pb_downloadProgressBar"
        android:visibility="gone"
        android:text="0%"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/ll_line_choose"
        android:src="@mipmap/line_below_content" />

    <LinearLayout
        android:id="@+id/ll_line_choose"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.85"
        android:visibility="gone"
        android:orientation="horizontal">

        <com.byd.lighttextview.LightButton
            android:id="@+id/btn_dialogSure"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textSize="@dimen/sp_11"
            android:visibility="gone"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/line_between_choose"
            android:visibility="gone"/>

        <com.byd.lighttextview.LightButton
            android:id="@+id/btn_dialogCancel"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="@dimen/sp_11" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>